[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/new_npc_5/new_npc_5.gd" type="Script" id=1]
[ext_resource path="res://assets/gear/shadow/shadow.png" type="Texture" id=2]
[ext_resource path="res://entities/lesson_module/lesson_module.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/dialogue/dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/monogram.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/gear/npc/npc_2.png" type="Texture" id=6]
[ext_resource path="res://assets/gear/ui/small_button.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.5
height = 6.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("interact_button:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -43 ), Vector2( -7, -42 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 13.0

[node name="new_npc_5" type="StaticBody2D"]
script = ExtResource( 1 )
dialogue_files = [ "res://dialogues/npc-4-1.json", "res://dialogues/npc-4-2.json" ]

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 6 )
hframes = 2
vframes = 2
frame = 2

[node name="collision_shape" type="CollisionShape2D" parent="."]
modulate = Color( 0, 1, 0.25098, 1 )
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="interact_button" type="Control" parent="."]
margin_left = -7.0
margin_top = -43.0
margin_right = 7.0
margin_bottom = -29.0

[node name="background" type="TextureRect" parent="interact_button"]
margin_right = 14.0
margin_bottom = 14.0
texture = ExtResource( 7 )

[node name="label" type="Label" parent="interact_button"]
margin_left = 1.0
margin_top = -1.0
margin_right = 15.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 5 )
text = "E"
align = 1
valign = 1

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="dialogue" parent="." instance=ExtResource( 4 )]
visible = false

[node name="lesson_module" parent="." instance=ExtResource( 3 )]
visible = false
text = "In Python, a for loop is used to iterate over sequences such as lists, tuples, string, etc.

A range is a series of values between two numeric intervals

We use Python's built-in function range() to define a range of values.
EX:
  values = range(4)
Here, 4 inside range() defines a range containing values 0, 1, 2 ,3.

In Python, we can use for loop to iterate over a range. For example,
EX:
  for i in range(4):
      print(i)
  #this prints 0,1,2,3. Numbers always starts at 0
The range() function defaults to 0 as a starting value, however it is possible to specify the starting value by adding a parameter: range(2, 6), which means values from 2 to 6 (but not including 6):
EX:
  for i in range(2, 6):
      print(i)
  #this prints 2, 3, 4, 5
The range() function defaults to increment the sequence by 1, however it is possible to specify the increment value by adding a third parameter: range(2, 6, 2):
EX:
  for i in range(2, 6, 2):
      print(i)
  #this prints 2, 4
You can also do decrement(decreasing) by doing: range(10, -1, -2):
EX:
  for i in range(10, -1, -2):
      print(i)
  #this prints 10, 8, 6, 4, 2, 0
<REMINDER!> Always remember your indentations!!"

[node name="interact_area" type="Area2D" parent="."]
position = Vector2( 0, -12 )

[node name="collision_shape" type="CollisionShape2D" parent="interact_area"]
position = Vector2( 0, 13 )
shape = SubResource( 3 )

[connection signal="finish_dialogue" from="dialogue" to="." method="_on_dialogue_finish_dialogue"]
[connection signal="hide" from="lesson_module" to="." method="_on_lesson_module_hide"]
[connection signal="body_entered" from="interact_area" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="interact_area" to="." method="_on_interact_area_body_exited"]
